--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/index_style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
@@ -19,7 +21,7 @@
         <div class="col-md-12 p-3">
           <h2 class="p-3 title">Click the Frog and See What It Tells YOU!</h2>
           <a href="#" id="myBtn"><i class="fas fa-frog fa-7x"></i></a>
-          <div class="quoteContainer rounded p-5 mt-4">
+          <div class="quoteContainer rounded p-5 mt-1">
             <h3 id="quote" class="w-75 m-auto p-2">
               I'm selfish, impatient and a little insecure. I make mistakes, I
               am out of control and at times hard to handle. But if you can't
